Adding about section

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Gal with a Trowel</title>
 </head>
 <body>
+    <h1>Gal with a Trowel</h1>
+    <h2>For all your gardening needs!</h2>
+    <h3>About</h3>
+    <section>We are a small gardening business in Louisville, Kentucky.</section>    
 </body>
 </html>
