Adding logo, placeholders for About section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>Gal with a Trowel</title>
 </head>
 <body>
+    <img src = "images/GWAT logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
     <h1>Gal with a Trowel</h1>
     <h2>For all your gardening needs!</h2>
-    <h3>About</h3>
-    <section>We are a small gardening business in Louisville, Kentucky.</section>    
+    <section>
+        <h3>About</h3>
+        <p>We are a small gardening business in Louisville, Kentucky.</p>
+        <p>Tara Sheehan, founder</p>
+        <img src= "http://placekitten.com/200/300" alt = "Photo of Gal with a Trowel founder Tara Sheehan">
+        <p>
+            Tara is a Louisville native with a lifelong passion for gardening. Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+            C/O https://placeholder.com/text/lorem-ipsum/ 
+        </p>
+    </section>    
 </body>
 </html>
