--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Gal with a Trowel</title>
 </head>
 <body>
-    <img src = "images/GWAT logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
+    <img src = "images/GWAT_logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
     <h1>Gal with a Trowel</h1>
     <h2>For all your gardening needs!</h2>
+    <!--About section with placeholder images and text, might move to a separate page-->
     <section>
         <h3>About</h3>
         <p>We are a small gardening business in Louisville, Kentucky.</p>
