Fix image name capitalization

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gal with a Trowel</title>
 </head>
 <body>
-    <img src = "images/GWAT_logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
+    <img src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
     <h1>Gal with a Trowel</h1>
     <h2>For all your gardening needs!</h2>
     <!--About section with placeholder images and text, might move to a separate page-->
