Add normalize css and stylesheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gal with a Trowel</title>
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
     <img src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
