--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gal with a Trowel</title>
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <img src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
@@ -22,6 +23,27 @@
 
             C/O https://placeholder.com/text/lorem-ipsum/ 
         </p>
+    </section>
+    <section>
+        <h3>Services</h3>
+        <ol>
+            <li>Let's Get Started</li>
+            <li>Take Me Shopping</li>
+            <li>Full Garden Plan</li>
+            <li>General Upkeep</li>
+            <li>Weeding/Clearing</li>
+            <li>Tilling</li>
+            <li>Pruning</li>
+            <li>Planting</li>
+        </ol>
+    </section>
+    <section>
+        <h3>Gallery</h3>
+    </section>
+    <section>
+        <h3>Contact</h3>
+        <p>Contact form coming soon!</p>
+        <p>The best ways to reach us are by e-mail, Facebook, and Instagram</p>
     </section>    
 </body>
 </html>
