--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
     </section>
     <section>
         <h3>Gallery</h3>
+        <img src="images/Facebook cover, backyard photos.jpg" alt = "Close up of garden flowers: purple and pink orchids with grass, house, and fence in background" height="400em">
     </section>
     <section>
         <h3>Contact</h3>
         <p>Contact form coming soon!</p>
         <p>The best ways to reach us are by e-mail, Facebook, and Instagram</p>
-    </section>    
+    </section>
+    <footer>
+        <!--Put links and icons for FAcebook and Instagram, plus a mailto link for e-mail-->
+    </footer>    
 </body>
 </html>
