Font update and adding mailto link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Gal with a Trowel</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
+    <!--Google Font html paste-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <img src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
@@ -45,9 +49,10 @@
         <h3>Contact</h3>
         <p>Contact form coming soon!</p>
         <p>The best ways to reach us are by e-mail, Facebook, and Instagram</p>
+        <p><a href="mailto:galwithatrowel@gmail.com?Subject=Service%20Request" target="_top">galwithatrowel@gmail.com</a></p>
     </section>
     <footer>
-        <!--Put links and icons for FAcebook and Instagram, plus a mailto link for e-mail-->
+        <!--Put links and icons for Facebook and Instagram, plus a mailto link for e-mail-->
     </footer>    
 </body>
 </html>
