Adding background color and other styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <img src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
+    <img id="logo" src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
     <h1>Gal with a Trowel</h1>
     <h2>For all your gardening needs!</h2>
     <!--About section with placeholder images and text, might move to a separate page-->
