Text alignment and other styling updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3>About</h3>
         <p>We are a small gardening business in Louisville, Kentucky.</p>
         <p>Tara Sheehan, founder</p>
-        <img src= "http://placekitten.com/200/300" alt = "Photo of Gal with a Trowel founder Tara Sheehan">
+        <img id="founder" src= "http://placekitten.com/200/300" alt = "Photo of Gal with a Trowel founder Tara Sheehan">
         <p>
             Tara is a Louisville native with a lifelong passion for gardening. Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
