New styles and nav rearrange

--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Della+Respira&display=swap" rel="stylesheet"> 
 </head>
 <body>
+    <script src="script.js"></script>
     <header>
         <img id="logo" src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
+
+        <!--make these clickable to those sections of the page-->
+        <a class = "nav">About</a>
+        <a class = "nav">Services</a>
+        <a class = "nav">Gallery</a>
+        <a class = "nav">Contact</a>
+             
         <h1>Gal with a Trowel</h1>
         <h2>Want to spruce up your green space, but don't have the time or green thumb? I can help with that! Let me help plant the seeds of the garden of your dreams. No space is too small or large to have a relaxing spot with beautiful greenery.</h2>
+        
+        <!--Maybe do JavaScript so different images show up upon each refresh-->
         <img src = "images/foxglove.jpg" alt = "Close-up of foxglove flowers" height = 300em>
         <img src = "images/Mimosas.jpg" alt = "Mimosa flowers" height = 300em>
     </header>
+   
     <!--About section with placeholder images and text, might move to a separate page-->
     <section id="About">
         <h3>About</h3>
@@ -42,6 +53,7 @@
 
     <section id="Services">
         <h3>Services</h3>
+        <!--Here, use JavaScript to let the details show or hide for each sub-item (eg, "show more")-->
         <ul>
             <li class = "main-items">Let's Get Started</li>
                 <li class = "sub-items">30 minutes, Free</li>
