Adding within-page navigation with anchor tags

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <img id="logo" src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
 
         <!--make these clickable to those sections of the page-->
-        <a class = "nav">About</a>
-        <a class = "nav">Services</a>
-        <a class = "nav">Gallery</a>
-        <a class = "nav">Contact</a>
+        <a class = "nav" href="#About">About</a>
+        <a class = "nav" href="#Services">Services</a>
+        <a class = "nav" href="#Gallery">Gallery</a>
+        <a class = "nav" href="#Contact">Contact</a>
              
         <h1>Gal with a Trowel</h1>
         <h2>Want to spruce up your green space, but don't have the time or green thumb? I can help with that! Let me help plant the seeds of the garden of your dreams. No space is too small or large to have a relaxing spot with beautiful greenery.</h2>
