Adding back to top anchor tags to each section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <header>
         <img id="logo" src = "images/GWAT_Logo.jpg" alt = "Gal with a Trowel Logo" height = 300em>
 
-        <!--make these clickable to those sections of the page-->
         <a class = "nav" href="#About">About</a>
         <a class = "nav" href="#Services">Services</a>
         <a class = "nav" href="#Gallery">Gallery</a>
@@ -31,7 +30,7 @@
         <img src = "images/Mimosas.jpg" alt = "Mimosa flowers" height = 300em>
     </header>
    
-    <!--About section with placeholder images and text, might move to a separate page-->
+    <!--About section with placeholder images and text-->
     <section id="About">
         <h3>About</h3>
         <p>We are a small gardening business in Louisville, Kentucky.</p>
@@ -49,6 +48,7 @@
 
             C/O https://placeholder.com/text/lorem-ipsum/ 
         </p>
+        <a href="#logo">Back to Top</a>
     </section>
 
     <section id="Services">
@@ -80,23 +80,23 @@
                 <li class = "sub-items">Duration and price vary</li>
                 <li class = "sub-items">From seeds to shrubs and trees. Some are more labor intensive than others. Price varies due to duration, quantity and size of plant/garden bed.</li>
         </ul>
+        <a href="#logo">Back to Top</a>
     </section>
 
     <section id="Gallery">
         <h3>Gallery</h3>
         <img src="images/Facebook cover, backyard photos.jpg" alt = "Close up of garden flowers: purple and pink orchids with grass, house, and fence in background" height="400em">
+        <p><a href="#logo">Back to Top</a></p>
     </section>
+    
     <section id="Contact">
         <h3>Contact</h3>
         <p>Contact form coming soon!</p>
-        <p>The best ways to reach us right now are by e-mail, Facebook, and Instagram</p>
-    </section>
-    
-    <footer>
-        <!--Put links and icons for Facebook and Instagram, plus a mailto link for e-mail, also make it open in a new tab instead of navigating away from page-->
+        <p>The best ways to reach us right now are by e-mail, Facebook, and Instagram</p> 
         <a class="contact-link" href="mailto:galwithatrowel@gmail.com?Subject=Service%20Request" target="_top">galwithatrowel@gmail.com</a>
         <a class="contact-link" href="http://www.facebook.com/galwithatrowel">Facebook</a>
         <a class="contact-link" href="http://www.instagram.com/galwithatrowel">Instagram</a>
-    </footer>   
+        <p><a href="#logo">Back to Top</a></p>
+    </section>
 </body>
 </html>
