Enabled Services and About to convert to columns for large screens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about">
         <h2>About</h2>
         <p>We are a small gardening business in Louisville, Kentucky.</p>
-        <div class = "container">
+        <div class = "list">
             <div class = "container-item">
                 <p class = "staff">Tara Sheehan, Founder & Lead Gardener</p>
                 <img id="founder" src= "images/hibiscus.jpg" alt = "Photo of Gal with a Trowel founder Tara Sheehan">
@@ -53,7 +53,7 @@
 
     <section id="services">
         <h2>Services</h2>
-        <div class="container">
+        <div class="list">
             <div class = "service">
                 <p class = "main-items">Let's Get Started</p>
                 <p class = "sub-items">30 minutes, Free</p>
