Fixing Instagram link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <footer>
         <a class="contact-link" href="mailto:galwithatrowel@gmail.com?Subject=Service%20Request" target="_top">galwithatrowel@gmail.com</a>
         <a class="contact-link" href="http://www.facebook.com/galwithatrowel">Facebook</a>
-        <a class="contact-link" href="http://www.instagram.com/galwithatrowel">Instagram</a>
+        <a class="contact-link" href="http://www.instagram.com/galwithatrowelky">Instagram</a>
     </footer>
 </body>
 </html>
