Adding email input and button

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Contact form coming soon!</p>
+        <form action="index.html" method="POST">
+            <p>Type your e-mail address below to join our mailing list</p>
+            <input type="email" id="email" name="user_email">
+            <button type="submit">Sign Up</button>
+            <main></main>
+        </form>
         <p>The best ways to reach us right now are by e-mail, Facebook, and Instagram</p> 
         <p><a href="#top-nav">Back to Top</a></p>
     </section>
@@ -122,5 +128,7 @@
         <a class="contact-link" href="http://www.facebook.com/galwithatrowel">Facebook</a>
         <a class="contact-link" href="http://www.instagram.com/galwithatrowelky">Instagram</a>
     </footer>
+ 
 </body>
 </html>
+<script src="email.js"></script>
