rename js files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>      
         <h1>Gal with a Trowel</h1>
         <p>Want to spruce up your green space, but don't have the time or green thumb? We can help with that! Let us help plant the seeds of the garden of your dreams. No space is too small or large to have a relaxing spot with beautiful greenery.</p>
-        <script src="script.js"></script>
+        <script src="array-func.js"></script>
     </header>
    
     <section id="about">
