--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
         <h2>Contact</h2>
         <p>Contact form coming soon!</p>
         <form action="index.html" method="POST">
-            <p>Type your e-mail address below to join our mailing list</p>
-            <input type="email" id="email" name="user_email">
-            <button type="submit">Sign Up</button>
-            <main></main>
+            <p>Type your first name for a secret message from our team!</p>
+            <input type="name" id="first-name" name="user_name">
+            <button id="btn" type="button">Sign Up</button>
+            <script src="email.js"></script>
+            <p class = "return-email"></p>
         </form>
-        <p>The best ways to reach us right now are by e-mail, Facebook, and Instagram</p> 
+        <p>The best ways to reach us right now are via e-mail, Facebook, and Instagram</p> 
         <p><a href="#top-nav">Back to Top</a></p>
     </section>
 
@@ -131,4 +132,3 @@
  
 </body>
 </html>
-<script src="email.js"></script>
