Updating README documentation

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         <form action="index.html" method="POST">
             <p>Type your first name for a secret message from our team!</p>
             <input type="name" id="first-name" name="user_name">
-            <button id="btn" type="button">Sign Up</button>
-            <script src="email.js"></script>
-            <p class = "return-email"></p>
+            <button id="btn" type="button">See Secret Message</button>
+            <script src="name.js"></script>
+            <p class = "return-name"></p>
         </form>
         <p>The best ways to reach us right now are via e-mail, Facebook, and Instagram</p> 
         <p><a href="#top-nav">Back to Top</a></p>
