Text change to secret message and addition of feature requirements to README

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h2>Contact</h2>
         <p>Contact form coming soon!</p>
         <form action="index.html" method="POST">
-            <p>Type your first name for a secret message from our team!</p>
+            <p>Type your first name and click the button for a secret message from our team!</p>
             <input type="name" id="first-name" name="user_name">
             <button id="btn" type="button">See Secret Message</button>
             <script src="name.js"></script>
