Trying a new array function for JavaScript

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <h1>Gal with a Trowel</h1>
         <p>Want to spruce up your green space, but don't have the time or green thumb? We can help with that! Let us help plant the seeds of the garden of your dreams. No space is too small or large to have a relaxing spot with beautiful greenery.</p>
         <script src="array-func.js"></script>
+        <!--Image element where random image will show up from js code-->
+        <img id = "headerImage" src="images/spacer.gif" alt="Random image of Gal with a Trowel projects from the gallery">
     </header>
    
     <section id="about">
