--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gal with a Trowel</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!--Google Font html paste-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         </div>      
         <h1>Gal with a Trowel</h1>
         <p>Want to spruce up your green space, but don't have the time or green thumb? We can help with that! Let us help plant the seeds of the garden of your dreams. No space is too small or large to have a relaxing spot with beautiful greenery.</p>
-        <script src="array-func.js"></script>
+        <script src="javascript/array-func.js"></script>
         <!--Image element where random image will show up from js code-->
         <img id = "headerImage" src="images/spacer.gif" alt="Random image of Gal with a Trowel projects from the gallery">
     </header>
@@ -119,7 +119,7 @@
             <p>Type your first name and click the button for a secret message from our team!</p>
             <input type="name" id="first-name" name="user_name">
             <button id="btn" type="button">See Secret Message</button>
-            <script src="name.js"></script>
+            <script src="javascript/name.js"></script>
             <p class = "return-name"></p>
         </form>
         <p>The best ways to reach us right now are via e-mail, Facebook, and Instagram</p> 
